Fixed vertical alignment - index.html

--- a/css/style.css
+++ b/css/style.css
@@ -12,7 +12,6 @@
 }
 
 html, body {
-  height:100%;
   background-color:#369;
 }
 
@@ -131,13 +130,14 @@ button:disabled {
 .center-cont {
   margin-right: auto;
   margin-left: auto;
-  width: 325px;
+  width: 335px;
 }
 
 #main-page {
   margin-right: auto;
   margin-left: auto;
   text-align: center;
+  padding-top: 10px;
 }
 
 #aber-username {
@@ -151,3 +151,6 @@ button:disabled {
   margin-left: auto;
 }
 
+#main {
+  padding-top: 15%;
+}
